# 766_ClientAndServer

./: README.md
766_Client_test_ubuntu/: CMakeLists.txt  CustomGraphicScene.cpp  CustomGraphicScene.h  Images.qrc  Sight.cpp  Sight.h  UdpClient.cpp  UdpClient.h  widget.cpp  widget.h  widget.ui
766_Server_test_ubuntu/: CMakeLists.txt  UdpServer.cpp  UdpServer.h  widget.cpp  widget.h  widget.ui
